--- a/package.json
+++ b/package.json
@@ -6,14 +6,27 @@
     "dev": "run-p watch start",
     "start": "vite --host --port 3000",
     "watch": "vite build --watch",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "npm run format && vite build",
+    "preview": "vite preview",
+    "lint": "run-p lint:js lint:style",
+    "lint:js": "eslint src/**/*.{js,html}",
+    "lint:style": "stylelint --allow-empty-input \"src/**/*.scss\"",
+    "format": "prettier --write src/**/*.{js,html,json,scss}"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.24",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-html": "^8.1.4",
     "glob": "^10.3.10",
+    "globals": "^17.3.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^3.8.1",
     "sass": "^1.83.4",
     "sharp": "^0.34.5",
+    "stylelint": "^17.1.1",
+    "stylelint-config-recess-order": "^7.6.0",
+    "stylelint-config-standard-scss": "^17.0.0",
     "vite": "^6.0.7",
     "vite-plugin-image-optimizer": "^2.0.3",
     "vite-plugin-sass-glob-import": "^6.0.2"
